--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -5,6 +5,7 @@
     "mgmcdermott.vscode-language-babel",
     "rodrigovallades.es7-react-js-snippets",
     "jmsv.javascriptsnippetsstandard",
-    "runningcoder.js-snippets"
+    "runningcoder.js-snippets",
+    "usernamehw.errorlens"
   ]
 }
